--- a/web/src/components/ChatbotOptions/ChatbotOptions.module.css
+++ b/web/src/components/ChatbotOptions/ChatbotOptions.module.css
@@ -1,17 +1,24 @@
 .container {
     display: flex;
     gap: 0.5rem;
+
 }
 
 .option {
-    padding: 0rem 1rem;
+    padding: 0.5rem 1rem;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 0.5rem;
     cursor: pointer;
     transition: background-color ease-in 0.7s;
 }
 
+.option p {
+    padding: 0px;
+    margin: 0px;
+}
+
 .option:hover {
     background-color: rgba(255, 255, 255, 0.5);
     transition: background-color ease-out 0.7s;
 }
+
